# simplisafe-switch

./: .gitignore  README.md  functions.sh  get-sensors.sh  get-state.sh  login.sh  pyproject.toml  requirements.txt  set-state.sh  simpli.py  simplisafe.json.example
