[tool.poetry]
name = "simplisafe-switch"
version = "0.0.1"
description = "Turn on and off SimpliSafe alarm system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
simplisafe-python = "^2022.2.1"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
